WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12817
REGRESSION (
r18634
): Table border-collapse problems with right margin
https://bugs.webkit.org/show_bug.cgi?id=12817
Summary
REGRESSION (r18634): Table border-collapse problems with right margin
Allan Jardine
Reported
2007-02-19 14:42:58 PST
As the attached page shows, there is a rendering problem with tables which have the border-collapse: collapse property applied to them, when they are drawn in by JavaScript. This problem does not exist when the table is drawn the first time, it is only visible when the table is redrawn (click the blue button on the example page). When the table is redrawn, the right hand border is still visible in grey (it should now be white) Safari 2.0.4 (419.3) has a similar problem, but the bottom and right borders are visible in that case.
Attachments
Border collapse redraw example
(2.39 KB, text/html)
2007-02-19 14:44 PST
,
Allan Jardine
no flags
Details
Let sections calculate their outer border before using it
(10.24 KB, patch)
2007-02-19 16:47 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Jardine
Comment 1
2007-02-19 14:44:07 PST
Created
attachment 13253
[details]
Border collapse redraw example
mitz
Comment 2
2007-02-19 15:14:33 PST
This is not a regression from shipping Safari, but this bug has been fixed in TOT, and later partly re-introduced by <
http://trac.webkit.org/projects/webkit/changeset/18634
>.
mitz
Comment 3
2007-02-19 16:47:43 PST
Created
attachment 13256
[details]
Let sections calculate their outer border before using it
Dave Hyatt
Comment 4
2007-02-19 17:35:49 PST
Comment on
attachment 13256
[details]
Let sections calculate their outer border before using it r=me
Sam Weinig
Comment 5
2007-02-19 19:12:33 PST
Landed in
r19719
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug