LayoutTests:

Reviewed by Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=12817
          REGRESSION (r18634): Table border-collapse problems with right margin

        * fast/repaint/table-outer-border-expected.checksum: Added.
        * fast/repaint/table-outer-border-expected.png: Added.
        * fast/repaint/table-outer-border-expected.txt: Added.
        * fast/repaint/table-outer-border.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12817
          REGRESSION (r18634): Table border-collapse problems with right margin

        Test: fast/repaint/table-outer-border.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::layout): Reordered to initialize horizontal overflow
        after table sections have computed their outer horizontal borders.



Canonical link: https://commits.webkit.org/16583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19719 268f45cc-cd09-0410-ab3c-d52691b4dbfc